Fix alignment

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -20,6 +20,7 @@ img {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 
